--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
